Add c__repr and so on for sanka-gtk